Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -127,7 +127,7 @@ For all mathematical methods, we provide their names and their interpretation in
 
 % Todo: once we know where the data is hosted, update
 
-We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229; here and below “$\pm$” after the mean denotes standard deviation). Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles apply to all analyses between younger and older animals in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a Looming stimulus, followed by a full-field Flash, followed by a spatially "Scrambled" looming stimulus (Fig 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. We recorded high speed calcium imaging signals \citep{xu2011,truszkowski2017} from one layer of “deep” principal tectal neurons in the tectum (Fig 1B,C); extracted fluorescence traces (Fig 1D,E), and inferred instantaneous spiking rate for each neuron within every frame (Fig 1F,G).
+We performed Ca imaging in 14 stage 45-46 tadpoles, and 16 stage 48-49 tadpoles, recording responses from 128$\pm$40 tectal cells (between 84 and 229; here and below “$\pm$” after the mean denotes standard deviation). Unless stated otherwise, sample sizes $n=$ 14 and 16 animals for stage 46 and 49 tadpoles apply to all analyses between younger and older animals in this study. To each tadpole, we presented a sequence of three different stimuli, always in the same order: a dark-on-light "Looming" stimulus, followed by a full-field dark "Flash", followed by a spatially "Scrambled" looming stimulus (Fig 1A). Scrambled stimuli were identical to looming, except that the visual field was split into a 7x7 grid of square tiles, and these tiles were randomly rearranged in space. In total we presented 60$\pm$11 stimuli to every animal, which means that a stimulus of every type was presented 20$\pm$4 times. We recorded high speed calcium imaging signals \citep{xu2011,truszkowski2017} from one layer of “deep” principal tectal neurons in the tectum (Fig 1B,C); extracted fluorescence traces (Fig 1D,E), and inferred instantaneous spiking rate for each neuron within every frame (Fig 1F,G).
 
 \begin{figure*}
 \includegraphics[width=\linewidth]{fig1.png}
@@ -151,9 +151,9 @@ To quantify stimulus selectivity, for each tectal cell we calculated Cohen’s $
 
 On average, tectal cells were selective for looming stimuli (within-brain mean $d$ of 0.67$\pm$0.50 and 0.46$\pm$0.47 in younger and older tadpoles respectively), with no difference between stages in terms of both mean and variance ($p_t=$ 0.3, 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). Compared to younger brains, older brains had fewer highly selective cells (Figure 2I). The gap between top-selective (90th percentile) and median selective cells was larger in younger (0.75$\pm$0.26) than in older tadpoles (0.53$\pm$0.27; $p_t=$ 0.03). These results were unexpected, as older tadpoles perform better in collision avoidance tests \citep{dong2009}, and we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
 
-We then considered the second, more computationally demanding definition of selectivity: a preference for spatially organized looming stimuli over scrambled stimuli. On average, tectal cells did not have a preference between these two stimuli (average selectivity of $-$0.07$\pm$0.33 in younger tadpoles, $-$0.04$\pm$0.49 in older ones; no change in development $p_t=$ 0.9). The share of cells that responded to looming stronger than to scrambled was at a chance level for both developmental stages (46$\pm$31\%, 48$\pm$37\%, $p_t=$ 0.9), and there was no change in either within-brain variance of this selectivity ($p_t=$ 0.9), or the 90$-$50 percentile asymmetry of values ($p_t=$ 0.8).
+We then considered a second, more computationally demanding definition of selectivity: a preference for spatially organized looming stimuli over scrambled stimuli. On average, tectal cells did not have a preference between these two stimuli (average selectivity of $-$0.07$\pm$0.33 in younger tadpoles, $-$0.04$\pm$0.49 in older ones; no change in development $p_t=$ 0.9). The share of cells that responded to looming stronger than to scrambled was at a chance level for both developmental stages (46$\pm$31\%, 48$\pm$37\%, $p_t=$ 0.9), and there was no change in either within-brain variance of this selectivity ($p_t=$ 0.9), or the 90$-$50 percentile asymmetry of values ($p_t=$ 0.8).
 
-The selectivity for scrambled stimuli over flashes correlated with selectivity for looming stimuli over flashes in both developmental groups: within-brain $r=$ 0.82$\pm$0.13, $p_{1t}=$3e-12 for younger animals, and 0.75$\pm$0.18, $p_{t1}=$ 3e-11 older ones (Fig 2D); no change in development ($p_t=$ 0.3). On the contrary, the preference for looming over flashes did not correlate with preference for looming over scrambled (Fig 2E; $r=$ 0.03$\pm$0.29, $p_{1t}=$ 0.7 for stage 46; 0.13$\pm$.30, $p_{1t}=$ 0.1 for stage 49). This confirms that the majority of cells in the tectum responded to stimulus dynamics, rather than to its geometry.
+We found that selectivity for scrambled stimuli over flashes correlated with selectivity for looming stimuli over flashes in both developmental groups: within-brain $r=$ 0.82$\pm$0.13, $p_{1t}=$3e-12 for younger animals, and 0.75$\pm$0.18, $p_{t1}=$ 3e-11 older ones (Fig 2D); no change in development ($p_t=$ 0.3). On the contrary, the preference for looming over flashes did not correlate with preference for looming over scrambled (Fig 2E; $r=$ 0.03$\pm$0.29, $p_{1t}=$ 0.7 for stage 46; 0.13$\pm$.30, $p_{1t}=$ 0.1 for stage 49). This confirms that the majority of cells in the tectum responded to stimulus dynamics, rather than to its geometry.
 
 Finally, as a holistic way to quantify tectal network selectivity, we looked at our ability to predict stimuli identity from recorded tectal responses \citep{avitan2016limitations}: a measure known as "stimulus encoding". We ran a multivariate logistic regression on one half of the data, linking amplitudes of responses in each cell to the type of stimulus used in each trial. Then we measured the quality of this linkage on the second half of recorded data (Fig. 2F). The quality of prediction was rather low: 59$\pm$12\% for younger, and 62$\pm$13\% for older tadpoles, with no change in development ($p_t=$ 0.6).
 
@@ -187,11 +187,11 @@ In our experiments, all tectal neurons received shared inputs from the eye, that
 Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
 \end{figure*}
 
-We interpreted transfer entropy values as approximations of weights in a connectivity matrix $\textbf{W}$ (Fig. 4A), with $w_{ji}$ describing the strength of connection from neuron $i$ to neuron $j$ (but see \citealt{mehler2018lure}). We calculated $\textbf{W}$ and corresponding $p$-values independently on looming, flash, and scrambled stimuli, and used these independent estimations to ensure some level of internal replication within each experiment (see Methods). Of all possible edges, only 1.6$\pm$1.4\% were found to be non-zero in all three independent analyses, which was significantly higher than 0.6$\pm$0.09\% expected if edges were assigned at random (paired t-test $p_{tp}=$ 9e-9). Finally, in each experiment, we introduced cut-offs on both $w_{ji}$ and $p$-values, to exclude weak noisy edges from the connectivity graph. We automatically adjusted these cut-offs in every experiment, to set the average node degree for each network (the average number of connections per node) to 1.0. It means that in each network, the total number of non-zero edges in the graph was equal to the number of nodes (recorded cells); an approach common for noisy network analysis \citep{stetter2012te}. With the average total degree set at 1.0, the effective significance thresholds on $p$-values for the detection of individual edges were between 0.001 and 0.007, depending on the experiment (median of 0.004).
+We interpreted transfer entropy values as approximations of weights in a connectivity matrix $\textbf{W}$ (Fig. 4A), with $w_{ji}$ describing the strength of connection from neuron $i$ to neuron $j$ (but see \citealt{mehler2018lure}). We calculated $\textbf{W}$ and corresponding $p$-values independently on looming, flash, and scrambled stimuli, and used these independent estimations to ensure some level of internal replication within each experiment (see Methods). Of all possible edges, only 1.6$\pm$1.4\% were found to be non-zero in all three independent analyses, which was significantly higher than 0.6$\pm$0.09\% expected if edges were assigned at random (paired t-test $p_{tp}=$ 9e-9). Finally, in each experiment, we introduced cut-offs on edge $p$-values, to exclude weak noisy edges from the connectivity graph. As noise levels varied across recordings, we had to adjusted these cut-offs, making the number of non-zero edges in each reconstruction equal to the number of recorded cells \citep{stetter2012te}. The effective $p$-value cut-offs were between 0.001 and 0.007 depending on the experiment (median of 0.004).
 
 The simplest statistical property of a probabilistic network is its \textbf{degree distribution}: the share of nodes with different number of incoming ($k_{in}$) and outgoing ($k_{out}$) connections. We compared rounded degree distributions (see Methods) between networks detected in younger and older tadpoles (Fig. 4B), and found that more developed networks contained fewer unconnected cells ($k_{in}$=0, $p_t<$0.03) and fewer cells with high number of connections ($k_{in}$=5, $k_{out}$=6, $p_t$=0.01 in both cases), but more cells with intermediate number of connections ($k_{in}$=2, $p_t$=0.001, and $k_{out}$=2, $p_t$=0.04). When we approximated degree distributions (excluding $k$=0) with a power law (Fig. 4C), the power constant $\gamma$ was smaller in younger (1.48$\pm$0.19) than in older tadpoles (1.82$\pm$0.25, $p_t$=2e-4), consistent with a sharper, steeper drop from the rate of occurrence of weakly connected to that of highly connected cells. It suggests (Fig. 4D) that older tectal networks had more chains of connected neurons (degree $k$=1) and forks ($k$=2), while younger neurons had more hyperconnected hubs ($k>$5) and unconnected nodes ($k_{in}$=0), which matches the expectation for STDP-driven networks \citep{fiete2010chains}.
 
-An unusual feature of our calcium imaging protocol, compared to most calcium imaging techniques, was that the signal-to-noise ratio varied greatly from one cell to another, depending on how far it was from the focal plane, and how much dye it absorbed while partially exposed to chamber solution during staining. As a result, the share of cells with weak signals, that appeared unconnected to the rest of the network due to low pairwise transfer entropy, varied across experiments, and was dependent on extraneous parameters, such as the physical curvature of the preparation. To ensure that poorly resolved cells do not bias our analysis too strongly, we restricted further network analysis to the largest weakly connected component of each network. There was no difference in the number of weakly connected components detected in younger and older tadpoles (50$\pm$14 and 50$\pm$26 for stages 45 and 49 respectively, $N$=14 and 16; $p_t$=0.9), but in older animals the largest weakly connected component included a higher share of observed cells (50$\pm$6\% and 64$\pm$12\% for younger and older networks respectively; $p_t$=4e-4), which matches the changes in degree distributions described above.
+An unusual feature of our calcium imaging protocol, compared to most calcium imaging techniques, was that the signal-to-noise ratio varied greatly from one cell to another, depending on how far it was from the focal plane, and how much dye it absorbed while partially exposed to chamber solution during staining. As a result, the share of cells with weak signals, that appeared unconnected to the rest of the network due to low pairwise transfer entropy, varied across experiments, and was dependent on extraneous parameters, such as the physical curvature of the preparation. To ensure that poorly resolved cells do not bias our analysis too strongly, we restricted further network analysis to the largest weakly connected component of each network. There was no difference in the number of weakly connected components detected in younger and older tadpoles (50$\pm$14 and 50$\pm$26 for stages 45 and 49 respectively, $N$=14 and 16; $p_t$=0.9), but in older animals the largest weakly connected component included a higher share of observed cells (50$\pm$6\% and 64$\pm$12\% for younger and older networks respectively; $p_t$=4e-4), matching the change in degree distributions described above.
 
 Another known theoretical prediction for networks dominated by STDP \citep{mu2006stdp,pratt2008recurrent} is that with time neuronal connections would become highly asymmetric. Indeed, if cells $i$ and $j$ are reciprocally connected, every time $j$ spikes after $i$, STDP would increase the weight $w_{ij}$ , but decrease $w_{ji}$ \citep{abbott1996ltpsequence,fiete2010chains}. We found that in our data, \textbf{the share of bidirectional edges} (with both $w_{ij}$ and $w_{ji}>$0) among all detected edges was smaller (0.3$\pm$0.3\%) than expected for random edge assignment in graphs of our size (0.4$\pm$0.1\%, paired $p_t$=0.02), indicating asymmetric information flow in the tectum. Moreover, the share of bidirectional edges decreased in development, from 0.4$\pm$0.3\% in younger animals to 0.2$\pm$0.2\% in older animals ($p_t$=0.03), suggesting that in tadpoles, STDP is shaping emerging network topology at these developmental stages.
 
@@ -199,9 +199,9 @@ We then looked at whether connected cells were more likely to be located spatial
 
 \subsection*{Network properties}
 
-For each connectivity graph reconstructed from tadpole tecta, we calculated several standard network properties, and compared them across developmental stages. Also, we used two techniques to see whether our results were statistically unusual. First, we compared network properties of our graphs to that of rewired graphs, in which the distribution of edge weights $w_{ji}$, and the number of edges adjacent to each node (node degrees) were kept fixed, but edges were randomly rewired between nodes (known as degree-preserving rewiring \citep{maslov2002}. Second, we performed a similar comparison, but randomized node degrees as well, by reassigning existing edges among all possible edges in a graph (full randomization), while still preserving the distribution of edge weights $w_{ji}$. In theory, two different modes of randomization allowed us to ascribe non-randomness of observed network parameters to either non-random degree distribution, or non-randomness of mesoscale graph structure \citep{ansmann2012surrogate}. In practice, for most networks measures we looked at, the non-random degree distribution and the structure of the graph had opposite effects on our measures of interest, making interpretation rather confusing.
+For each connectivity graph reconstructed from tadpole tecta, we calculated several standard network properties, and compared them across developmental stages. Also, we used two techniques to see whether our results were statistically unusual. First, we compared network properties of our graphs to that of rewired graphs, in which the distribution of edge weights $w_{ji}$, and the number of non-zero edges adjacent to each node (node degrees) were fixed, but edges were randomly rewired between nodes (a generalization of degree-preserving rewiring, \citealt{maslov2002}). Second, we performed a similar comparison, but randomized node degrees as well, by reassigning existing edges among all possible edges in a graph (full randomization), while still preserving the distribution of edge weights $w_{ji}$. In theory, two different modes of randomization allowed us to ascribe non-randomness of observed network parameters to either non-random degree distribution, or non-randomness of mesoscale graph structure \citep{ansmann2012surrogate}. In practice, for most networks measures we looked at, the non-random degree distribution and the structure of the graph had opposite effects on our measures of interest, making interpretation rather confusing.
 
-The measure of overall connectivity in the graph, named weighted \textbf{network efficiency}, is defined as the average inverse shortest path for any two nodes in the network \citep{latora2001efficiency}. This value is high when there tend to be short paths between any two randomly chosen nodes, and signals can easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Fig. XXX example). For a connectivity graph, high edge weights represent strong connections, so network efficiency is calculated on inverse weights $R_{ji} = 1/w_{ji}$ \citep{rubinov2010toolbox}. We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for either a random network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively), or a fully randomized network ($d$=$-$0.5 and $-$0.05; paired $p_t$=0.02 and 0.01 for younger and older tadpoles respectively). Efficiency did not  change much in development ($d$=$-$0.8, $p_t$=0.06).
+The measure of overall connectivity in the graph, named weighted \textbf{network efficiency}, is defined as the average inverse shortest path for any two nodes in the network \citep{latora2001efficiency}. This value is high when there tend to be short paths between any two randomly chosen nodes, and signals can easily propagate within the graph; the value is low when some nodes are located far from each other on a graph (Fig. XXX example). For a connectivity graph, high edge weights represent strong connections, so network efficiency is calculated on inverse weights $R_{ji} = 1/w_{ji}$ \citep{rubinov2010toolbox}. We found that network efficiency (0.004$\pm$0.002 for stage 46, 0.002$\pm$0.002 for stage 49 tadpoles) was slightly lower than expected for either a random network with matching degree distribution ($d$=$-$0.3, paired $p_t$=0.04 and $d$=$-$0.3, paired $p_t$=0.06 for younger and older tadpoles respectively), or a fully randomized network ($d$=$-$0.5 and $-$0.05; paired $p_t$=0.02 and 0.01 for younger and older tadpoles respectively). Efficiency did not  seem to change with age ($d$=$-$0.8, $p_t$=0.06).
 
 Network \textbf{clustering coefficient} describes the small-scale heterogeneity in the network \citep{fagiolo2007}, and is defined as the relative frequency of two neighboring nodes being a part a triangle with a third node connected to both of them (Fig. XXX example). The value of clustering coefficient in our networks was very small (2.4$\pm$2.5 e-3 for stage 46, 1.5$\pm$1.6 e-3 for stage 49 animals), but slightly larger than expected in a randomly rewired network with same degree distribution ($d=$ 0.5 and 0.6, paired $p_t=$ 0.01 and 0.02 for younger and older animals), and similar to what would be expected for a random graph ($d=$ 0.1 and 0.2; paired $p_t=$ 0.4 and 0.3). This suggests that the observed distribution of degrees made our networks less clustered than a random network, but the assortative arrangement of nodes countered this effect. There was no change in clustering in development ($d$=$-$0.4, $p_t$=0.3, Fig.).
 
@@ -440,7 +440,7 @@ Our definition of \textbf{hierarchical flow} was inspired by \citep{mones2012hie
 
 Each node then further redirected this activation to other nodes. This definition is very close to that of pagerank centrality \citep{page1999pagerank}, with a minor difference that the weights are not normalized to the value of total outgoing weights for each node $i$: that is, we work with raw weights of $w_{ji}$ rather than $w_{ji}/\sum_k{w_{ki}}$. It means that a node with many outputs has a strong influence over network activation, nodes with weak outgoing edges act almost as dead-ends. Similar to a standard pagerank algorithm, we found solution the stable solution of this problem iteratively, by initializing the network with equal values of centrality, and then running the equation above 100 times or until convergence. Once the distribution of centralities $z_i$ stabilized, we used the difference between the maximal Katz centrality and mean centrality across all nodes as a measure of hierarchical flow in the network [ref]: $h = \text{max}(z_i) - \text{mean}(z_i)$.
 
-To check whether network values described above were different from values expected on a random graph, we performed a two-stage \textbf{graph randomization}. First, we randomized each graph using a variety degree-preserving reshuffling \citep{maslov2002}. To do so, for a network with $N_E$ edges we picked 3$\cdot N_E$ random pairs of nodes (nodes $i$, $j$, $k$, and $l$) that had strong connections from $i$ to $j$, and from $k$ to $l$, but weak connections from $i$ to $l$, and from $j$ to $k$ (we required $w_{ji}>w_{li}$ and $w_{lk}>w_{jk}$). We also required all four nodes be different ($i \neq j \neq k \neq l$). Then we cross-wired them, thus gradually randomizing network topology:
+To check whether network values described above were different from values expected on a random graph, we performed a two-stage \textbf{graph randomization}. First, we randomized each graph using a variant of degree-preserving reshuffling \citep{maslov2002} that we generalized for directed weighted graphs. For a network with $N_E$ edges we picked 3$\cdot N_E$ random pairs of nodes (nodes $i$, $j$, $k$, and $l$) that had strong connections from $i$ to $j$, and from $k$ to $l$, but weak connections or no connections from $i$ to $l$, and from $j$ to $k$ (we required $w_{ji}>w_{li}$ and $w_{lk}>w_{jk}$). We also required all four nodes to be different ($i \neq j \neq k \neq l$). Then we cross-wired these pairs of nodes, gradually randomizing network topology:
 
 \[ \left \{ \begin{array}{l}  
 w_{ji} \leftarrow w_{li} \\ 
